hooking things up, WIP :purple_heart:
